--- a/templates/opendkim/opendkim.conf
+++ b/templates/opendkim/opendkim.conf
@@ -1,3 +1,5 @@
+### THIS FILE IS MANAGED BY ANSIBLE -- DO NOT EDIT! ###
+
 PidFile                 /var/run/opendkim/opendkim.pid
 
 Mode                    {{ 's' if mta_dkim_sign else '' }}{{ 'v' if mta_dkim_verify else '' }}
