Fix different problems and warnings in templates and remove with_dict loop condition

--- a/tasks/opendkim.yml
+++ b/tasks/opendkim.yml
@@ -1,8 +1,6 @@
 ---
 - name: install packages
-  yum: name={{ item }} state=latest
-  with_items:
-    - opendkim
+  yum: name=opendkim state=latest
   tags:
     - yum
 
