compatibility with ansible-core >2.19

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,7 +9,7 @@ mta_local_sender_canonical_maps: []
 mta_local_recipient_canonical_maps: []
 mta_local_canonical_header_checks: []
 mta_relayhost: false
-mta_relayhost_auth_username: null
+mta_relayhost_auth_username: false
 mta_relayhost_auth_mapfile: /etc/postfix/password_map
 mta_smtp_tls_wrappermode: false
 mta_smtp_tls_security_level: "may"
